# combinatorial

./: Cargo.toml  LICENSE  README.md
src/: combinations.rs  lib.rs  permutations.rs
