[package]
name = "combinatorial"
version = "0.2.1"
authors = ["Oliver Calder <oliver@calder.dev>"]
edition = "2021"
description = "Combinatorial tools, functions, and generators."
documentation = "https://docs.rs/combinatorial"
readme = "README.md"
homepage = "https://github.com/olivercalder/combinatorial/"
repository = "https://github.com/olivercalder/combinatorial/"
license = "MIT"
keywords = ["combinations", "permutations", "combinatorics", "itertools", "mathematics"]
categories = ["algorithms", "mathematics"]

[dependencies]
